[package]
name = "playground"
version = "0.0.1"
authors = ["The Rust Playground"]
resolver = "2"

[profile.dev]
codegen-units = 1
incremental = false

[profile.dev.build-override]
codegen-units = 1
debug = true

[profile.release]
codegen-units = 1
incremental = false
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[profile.release.build-override]
codegen-units = 1
debug = false

[dependencies.wasm_bindgen]
package = "wasm-bindgen"
version = "0.2.92"

[dependencies.zkwasm_rust_sdk]
package = "zkwasm-rust-sdk"
git = "https://github.com/DelphinusLab/zkWasm-rust.git"
branch = "main"

[dependencies.ff]
package = "ff"
version = "0.13"
features = ["derive"]

[dependencies.primitive-types]
package = "primitive-types"
version = "0.12.1"
default-features = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
